RESOLVED FIXED205267
WebKitTestRunner should report service worker process crashes
https://bugs.webkit.org/show_bug.cgi?id=205267
Summary WebKitTestRunner should report service worker process crashes
youenn fablet
Reported 2019-12-16 06:40:59 PST
Currently service worker crashes are only reported if a page lives in the process.
Attachments
Patch (9.75 KB, patch)
2019-12-16 06:43 PST, youenn fablet
no flags
Patch (9.13 KB, patch)
2019-12-16 07:07 PST, youenn fablet
no flags
Patch for landing (9.11 KB, patch)
2019-12-17 00:25 PST, youenn fablet
no flags
youenn fablet
Comment 1 2019-12-16 06:43:38 PST
youenn fablet
Comment 2 2019-12-16 07:07:24 PST
Chris Dumez
Comment 3 2019-12-16 12:25:17 PST
Comment on attachment 385761 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=385761&action=review > Source/WebKit/UIProcess/API/C/WKContext.h:106 > + WKContextNetworkProcessDidCrashCallback serviceWorkerProcessDidCrash; WKContextNetworkProcessDidCrashCallback -> WKContextChildProcessDidCrashCallback or introduce a new typedef for the service worker. It is very confusing to have a Callback with NetworkProcess in there, even though it gets called for the ServiceWorkerProcess.
youenn fablet
Comment 4 2019-12-17 00:25:50 PST
Created attachment 385861 [details] Patch for landing
WebKit Commit Bot
Comment 5 2019-12-17 03:33:24 PST
Comment on attachment 385861 [details] Patch for landing Clearing flags on attachment: 385861 Committed r253620: <https://trac.webkit.org/changeset/253620>
WebKit Commit Bot
Comment 6 2019-12-17 03:33:25 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2019-12-17 03:34:19 PST
Note You need to log in before you can comment on or make changes to this bug.