WebKitTestRunner should report service worker process crashes https://bugs.webkit.org/show_bug.cgi?id=205267

Reviewed by Chris Dumez.

Source/WebKit:

Expose a way for WTR to be notified of service worker process crashes.

* UIProcess/API/C/WKContext.h:
* UIProcess/WebContextClient.cpp:
(WebKit::WebContextClient::serviceWorkerProcessDidCrash):
* UIProcess/WebContextClient.h:
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::serviceWorkerProcessCrashed):
* UIProcess/WebProcessPool.h:
* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::processDidTerminateOrFailedToLaunch):

Tools:

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::generatePageConfiguration):
(WTR::TestController::serviceWorkerProcessDidCrash):
* WebKitTestRunner/TestController.h:


Canonical link: https://commits.webkit.org/218527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253620 268f45cc-cd09-0410-ab3c-d52691b4dbfc